[package]
name = "rebos"
authors = ["Jackson Novak <jacksonnovak@proton.me>"]
version = "3.5.2"
edition = "2021"
description = "NixOS-like repeatability for any Linux distro."
license = "GPL-3.0-or-later"
repository = "https://gitlab.com/Oglo12/rebos"

[profile.bench]
lto = "thin"
debug = 1
strip = false

[profile.release]
debug = 0
lto = true
opt-level = 3
codegen-units = 1
strip = true

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
colored = "2.1.0"

hostname = "0.4.0"
piglog = { version = "1.4.1", features = ["clap_derive"] }
serde = { version = "1.0.210", features = ["derive"] }
toml = "0.8.19"

